<resources>
    <string name="app_name">Путеслав</string>
    <string name="go_to_roads_choose_fragment_panel_title">Информация о дороге</string>
    <string name="got_to_interactive_map_panel_title">Интерактивная карта</string>
    <string name="warnings_title">Общие предупреждения:</string>
    <string name="roads_list_title">Выберите трассу, о которой вы хотите получить информацию:</string>
    <string name="road_place_go_to_yandex_map_title">Нажмите на кнопку, чтобы составить маршрут в ЯндексКартах:</string>
    <string name="go_to_yandex_map_button_title">Перейти в ЯндексКарты</string>
    <string name="know_road_information_title">Узнать:</string>
    <string name="know_road_cafe_information">Где можно поесть?</string>
    <string name="know_road_guesthouse_information">Где можно переночевать?</string>
    <string name="know_road_petrol_station_information">Где можно заправить машину?</string>
    <string name="know_road_car_service_information">Где можно получить обслуживание автомобиля?</string>
    <string name="know_road_car_recharge_station_information">Где можно зарядить электромобиль?</string>
    <string name="know_road_events_information">Какие события есть по пути?</string>
    <string name="back_to_previous_fragment_text">Вернуться назад</string>
    <string name="ros_avto_dor_bot_mame">Бот помощник рос авто дора</string>
    <string name="change_current_user_name_option">Изменить имя</string>
    <string name="dialog_window_sentence">Чтобы изменить своё имя, просто введите новое в поле под старым.</string>
    <string name="add_point_to_interactive_map">Чтобы добавить точку на карту, нажмите на эту кнопку.</string>
    <string name="road_accident_menu_item_title">ДТП</string>
    <string name="pothole_menu_item_title">Яма</string>
    <string name="obstruction_menu_item_title">Преграда</string>
    <string name="bandit_menu_item_title">Бандит</string>
    <string name="dialog_window_positive_button_text">Изменить</string>
    <string name="dialog_window_negative_button_text">Отменить</string>
    <string name="verified_point_popup_window_goto_button_text">Поехали!</string>
    <string name="event_point_popup_window_know_more_button_text">Узнать больше</string>
    <string name="event_road_place_element_know_more_button_text">Узнать больше о событии</string>
    <string name="create_description_for_adding_point_popup_window_title">Добавьте текстовое описание:</string>
    <string name="create_description_for_adding_point_popup_window_edit_text_hint">Напишите здесь описание…</string>
    <string name="create_description_for_adding_point_popup_window_confirm_button_text">Принято</string>
    <string name="create_description_for_adding_point_popup_window_cancel_button_text">Отмена</string>
    <string name="petrol_station">АЗС</string>
    <string name="cafe">Кафе</string>
    <string name="car_service">Автосервис</string>
    <string name="guesthouse">Гостиница</string>
    <string name="car_recharge_station">ЭЗС</string>
    <string name="event">Событие</string>
    <string name="incidents">Проишествия</string>
    <string name="filtres_title">Фильтры</string>
    <string name="petrol_station_road_places_list_title">Ближайшие места, где можно  заправиться:</string>
    <string name="cafe_road_places_list_title">Ближайшие места, где можно поесть:</string>
    <string name="guesthouse_road_places_list_title">Ближайшие места, где можно переночевать:</string>
    <string name="car_service_road_places_list_title">Ближайшие места, где можно починить  автомобиль:</string>
    <string name="car_recharge_station_road_places_list_title">Ближайшие места, где можно зарядить электромобиль:</string>
    <string name="event_road_places_list_title">Ближайшие cобытия:</string>
    <string name="error_road_places_list_title">Случилась какая-то ошибка, попробуйте перезапустить это окно</string>

    <string name="verified_point_name_format">%1$s: %2$s</string>
    <string name="road_warnings_title_format">Предупреждения по трассе: %s</string>
    <string name="distance_to_road_place_format">%.2f км</string>
    <string name="options_title">Настройки:</string>
    <string name="notification_options_title">Отправлять уведомления для:</string>
    <string name="about_program_option_title">О программе</string>
    <string name="chelyabinsk_obl">Челябинской области</string>
    <string name="chelyabinsk_obl_road1">Дороги М5-ПКЕ</string>
    <string name="chelyabinsk_obl_road2">Дороги А-310</string>
    <string name="kurgan_obl">Курганской области</string>
    <string name="kurgan_obl_road_1">Дороги М5-ПКЕ</string>
    <string name="kurgan_obl_road_2">Дороги А-310</string>
    <string name="event_date_title_text">Дата проведения:</string>
</resources>