<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343A56"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.roadInformationFragment.RoadInformationFragment">

    <ImageView
        android:id= "@+id/back_to_roads_choose_fragment_panel"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#4E53D3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id = "@+id/back_to_roads_choose_fragment_panel_button"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/back_arrow"
        app:layout_constraintStart_toStartOf="@+id/back_to_roads_choose_fragment_panel"
        app:layout_constraintTop_toTopOf="@+id/back_to_roads_choose_fragment_panel"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height ="wrap_content"
        android:gravity="start"
        android:layout_marginStart="18dp"
        android:text="@string/back_to_previous_fragment_text"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/back_to_roads_choose_fragment_panel_button"
        app:layout_constraintTop_toTopOf="@+id/back_to_roads_choose_fragment_panel_button"
        />
    <LinearLayout
        android:id="@+id/know_road_information_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_to_roads_choose_fragment_panel"
        android:orientation="vertical"
        android:background="@drawable/know_road_information_background"
        android:paddingTop="6dp"
        android:paddingBottom="8dp"
        >
        <TextView
            android:id="@+id/know_road_information_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:paddingHorizontal="8dp"
            android:text="@string/know_road_information_title"
            />
        <TextView
            android:id="@+id/know_road_cafe_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:background="@drawable/know_road_information_element_background"
            android:text="@string/know_road_cafe_information"
            />
        <TextView
            android:id="@+id/know_road_guesthouse_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:background="@drawable/know_road_information_element_background"
            android:text="@string/know_road_guesthouse_information"
            />
        <TextView
            android:id="@+id/know_road_petrol_station_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:background="@drawable/know_road_information_element_background"
            android:text="@string/know_road_petrol_station_information"
            />
        <TextView
            android:id="@+id/know_road_car_service_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:background="@drawable/know_road_information_element_background"
            android:text="@string/know_road_car_service_information"
            />
        <TextView
            android:id="@+id/know_road_car_recharge_station_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:background="@drawable/know_road_information_element_background"
            android:text="@string/know_road_car_recharge_station_information"
            />
        <TextView
            android:id="@+id/know_road_events_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginHorizontal="8dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="5dp"
            android:background="@drawable/know_road_information_last_element_background"
            android:text="@string/know_road_events_information"
            />
    </LinearLayout>


    <include
        android:id="@+id/go_to_interactive_map_fragment_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/go_to_interactive_map_panel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/know_road_information_panel"
        />

    <TextView
        android:id="@+id/road_warnings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/road_advertisements_title_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_interactive_map_fragment_panel" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id ="@+id/swipe_refresh_layout_for_road_advertisements_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/road_warnings_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/road_advertisements_list_background"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/roads_recycler_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>